--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -1,4 +1,4 @@
-<div class="replyForm">
+<div id="replyForm" class="contentForm">
   <div class="form-row">
     <textarea class="form-control form-control-sm comment-textarea editable-text editable-comment-content" id="commentContent" name="commentContent" style="resize: none;" placeholder="Write a comment." maxlength="9000"></textarea>
   </div>
