--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -156,28 +156,29 @@ $(function() {
     let commentsContainer = commentButton.closest('.replyContainer').find('.repliesContainer');
     let emojiWindow = replyForm.find('.replyEmojiWindow');
 
-    let pc = replyForm.find('#image-preview-holder');
+    let pc = replyForm.find('#image-preview-holder')[0];
     
+    var sortedurls = []; //will contain urls in preview-window order, instead of the order in which they were recieved from the server
+    var imagedescs = [];
+
     if(pc.uploadsCompleted){
-      if(pc.uploadsCompleted!= pc.uploadsStarted-pc.uploadsCancelled){
+      if(pc.uploadsCompleted != pc.uploadsStarted-pc.uploadsCancelled){
         bootbox.alert("You have image uploads in progress.");
         return;
       }else{
-        var sortedurls = []; //putting urls in preview-window order, instead of the order in which they were recieved from the server
-        var imagedescs = [];
         for(let i=0; i < $(pc).find('.newimagecont').length; i++){
-          let imageWindow = $($(pc).find('.newimagecont')[i]); // i feel like there's a cleaner way to do this than $($())
+          let imageWindow = $($(pc).find('.newimagecont')[i]); // i feel like there probably exists a cleaner way to do this than $($())?
           sortedurls.push(pc.uploadedImageUrls[imageWindow.attr('urlpos')]);
           imagedescs.push(imageWindow.find('#postImageDescription').val());
         }
       }
     }
 
-    if (commentContent.replace(/<[^>]*>/g, "") != "") { // Filter out empty comments
+    if (commentContent.replace(/<[^>]*>/g, "") != "" || sortedurls.length > 0) { // Filter out empty comments
       commentButton.prop('disabled', true);
       $.post("/createcomment/"+$(this).attr("data-post-id"),
       { commentContent: commentContent,
-        images: JSON.stringify(sortedurls),
+        imageUrls: JSON.stringify(sortedurls),
         imageDescs: JSON.stringify(imagedescs)
       },
       function(data) {
@@ -186,7 +187,7 @@ $(function() {
           contentEditable.html("");
           let html = '<div class="individualReplyContainer"><div class="mb-1 d-flex"><img class="postAuthorImage" style="width:25px;height:25px;border-radius:3px;" src="/images/' + data.image + '" /><div class="comment-header"><div class="comment-header-row-1">' + data.name + '<div class="comment-header-divider">&middot;</div><div class="commentTimestamp"><small class="text-muted">' + data.timestamp + '</small></div><button type="button" class="btn btn-link btn-xs replyToComment comment-button" data-username="' + data.username + '"><i class="fas fa-reply"></i></button><button type="button" class="btn btn-link btn-xs deleteComment comment-button" id="'+ data.comment_id + '" data-post-id="' + data.post_id + '" data-comment-id="'+data.comment_id+'">&times;</button></div></div></div>' + data.content;
           for (let i=0; i<sortedurls.length;i++){
-            html += '<img alt="'+imagedescs[i]+' (posted by '+$('navbar-username')[0].innerHTML+')" class="post-single-image" src="/api/image/display/'+sortedurls[i]+'" data-featherlight="/api/image/display/'+sortedurls[i]'+">';
+            html += '<img alt="'+imagedescs[i]+' (posted by '+$('.navbar-username')[0].innerHTML+')" class="post-single-image" src="/api/image/display/'+sortedurls[i]+'" data-featherlight="/api/image/display/'+sortedurls[i]+'">';
           }
           html+='</div>';
           $(html).hide().appendTo(commentsContainer).fadeIn();
@@ -199,7 +200,13 @@ $(function() {
             let newCommentCount = parseInt(counterToChange.textContent.replace(regex,""))+1;
             counterToChange.innerHTML = counterToChange.innerHTML.replace("(" + (newCommentCount-1) + ")", "(" + (newCommentCount) + ")");
           }
-          emojiWindow.hide()
+          emojiWindow.hide();
+          $(pc).children('.newimagecont').remove(); //removes all image preview windows
+          pc.uploadsStarted = 0;
+          pc.uploadsCompleted = 0;
+          pc.uploadsCancelled = 0;
+          pc.uploadedImageUrls = [];
+          pc.imageUploadRequests = []; 
         }
         else {
           let html = '<div class="individualReplyContainer"><div class="alert alert-danger">There has been a problem posting your comment. Sorry! Please copy the comment text, refresh the page, and try again.</div></div>'
