comment image deletion upon comment/post deletion

--- a/views/partials/uploadscripts.handlebars
+++ b/views/partials/uploadscripts.handlebars
@@ -13,23 +13,18 @@ $(function() {
     pasteHtmlAtCaret($("#postForm").find('.editable-post-content.medium-editor-element'), '<span class="emoji"> ' + event.target.innerHTML + '</span>');
   })
   
-      //IMAGE UPLOADER CODE
-    /*hm
-    var uploadsStarted = 0;
-    var uploadsCompleted = 0;
-    var uploadsCancelled = 0;
-    var uploadedImageUrls = [];
-    var imageUploadRequests = []; //stored so we can cancel requests arbitrarily during the uploading process*/
+    //IMAGE UPLOADER CODE
 
-    //function right after clicking the add image button on the post and comment forms
+    //function called right after clicking the add image button on the post and comment forms
     function fileselected (e) {
+      let previewContainer = $(this).parent()[0];
+
       for(var i = 0;i<this.files.length;i++){
         //check to make sure it's a supported file type of the correct size
         if(((this.files[i].type === "image/jpeg" || this.files[i].type === "image/png") && this.files[i].size < 10485760) || (this.files[i].type === "image/gif" && this.files[i].size < 5242880)){
           
           var submitbutton = $(this).closest('.contentForm').find('button[type="submit"]');
           submitbutton.html("<i class='fas fa-spinner fa-spin'></i> Uploading").prop('disabled', true);
-          let previewContainer = $(this).parent()[0];
 
           //initialize variables for this image uploady thing
           if(!previewContainer.uploadsStarted){
@@ -103,6 +98,7 @@ $(function() {
           }
         }
       }
+      $(previewContainer).children('input').val(''); //we need to reset this so that file selection consistently registers as a 'change' event
     }
   
   $("body").on('click','#postImageButton',function(e){
