Post image gallery code and CSS

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,9 @@
   <script src="/js/autosize.min.js"></script>
   <script src="/js/jquery.uploadPreview.min.js"></script>
   <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.css" type="text/css" rel="stylesheet" />
+  <link href="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.css" type="text/css" rel="stylesheet" />
   <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="//cdn.rawgit.com/noelboss/featherlight/1.7.13/release/featherlight.gallery.min.js" type="text/javascript" charset="utf-8"></script>
   <link href="/css/image-upload-preview.css" type="text/css" rel="stylesheet" />
   <script src="/js/bootbox.min.js"></script>
   <link rel="stylesheet" href="/css/tribute.css" />
