--- a/public/css/style.css
+++ b/public/css/style.css
@@ -189,11 +189,16 @@ hr {
   background-color: #fff;
   border: 2px dashed #d5d5d5;
 }
-.post-single-image {
+.two-images > .post-single-image,
+.three-images > .post-single-image,
+.four-images > .post-single-image {
   border: 1px solid #eaeaea;
 }
+.post-single-image {
+  border: 1px solid transparent;
+}
 .post-single-image:hover {
-  border-color: #9b9b9b;
+  border: 1px solid #9b9b9b;
 }
 .image-clear {
   background-color: #ffffff99;
@@ -650,6 +655,10 @@ hr {
     word-wrap: break-word;
 }
 
+/* .comment-content {
+  margin-left: 30px;
+} */
+
 .user-list {
     padding: 0;
     margin: 0 0 10px 0;
@@ -1091,18 +1100,60 @@ hr {
 }
 
 .post-images {
-  /* text-align: center; */
+  display: grid;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  max-height: 400px;
 }
 
-.post-single-image {
+.post-images a {
+  min-height: 100%;
+}
+
+.post-single-image,
+.post-single-image > img {
+  object-fit: cover;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  max-height: 400px;
+  transition: border 100ms ease-in;
+}
+
+.post-images.one-image {
+  background-image: linear-gradient(45deg, #fff5f9 25%, #ffffff 25%, #ffffff 50%, #fff5f9 50%, #fff5f9 75%, #ffffff 75%, #ffffff 100%);
+background-size: 5.66px 5.66px;
+  grid-template-columns: 100%;
+  grid-template-rows: 100%;
+}
+
+.post-images.one-image > img {
+  object-fit: contain;
+}
+
+.post-images.two-images {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100%;
+}
+
+.post-images.three-images,
+.post-images.four-images {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.post-images.three-images > *:first-child {
+  grid-row-end: span 2;
+}
+
+/* .post-single-image {
   max-width: 100%;
   margin: 0 0 1rem 0;
-  /*border moved to colors*/
   border-radius: 6px;
   max-height: 300px;
   object-fit: contain;
   cursor: pointer;
-}
+} */
 
 .image-clear {
     border-radius: 90%;
@@ -1249,3 +1300,15 @@ hr {
 .subscribed-alert a{
   font-weight: 500;
 }
+
+.featherlight-next:hover, .featherlight-previous:hover {
+    background: none !important;
+}
+
+.featherlight-next span, .featherlight-previous span {
+  text-shadow: 0 0 8px rgba(0,0,0,0.6) !important;
+}
+
+/* .featherlight-next::before {
+  content: '\f054'
+} */
