--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -96,6 +96,12 @@ $(function() {
   $('#postsContainer').on( 'append.infiniteScroll', function( event, response, path, items ) {
     editor.addElements('.editable-text');
     tribute.attach($(".editable-comment-content"));
+    $('*[data-featherlight-gallery]').featherlightGallery({
+  		previousIcon: '<i class="fas fa-angle-left"></i>',     /* Code that is used as previous icon */
+  		nextIcon: '<i class="fas fa-angle-right"></i>',         /* Code that is used as next icon */
+  		galleryFadeIn: 100,          /* fadeIn speed when slide is loaded */
+  		galleryFadeOut: 100          /* fadeOut speed before slide is loaded */
+  	});
   });
 
   // RICH TEXT EDITOR INIT
