--- a/views/partials/posts.handlebars
+++ b/views/partials/posts.handlebars
@@ -159,9 +159,7 @@
               <div class="comment-content">
                 {{{this.parsedContent}}}
                 {{#if this.images}}
-                  {{#each this.images}}
-                    <img alt="{{#if ../this.imageDescriptions}}{{lookup ../this.imageDescriptions @index}} (posted by {{../this.author.username}}){{else}}Image posted by {{../this.author.username}}{{#if ../this.imageTags}}, which may contain: {{../this.imageTags}}{{/if}}{{/if}}" class="post-single-image" src="/api/image/display/{{this}}" data-featherlight="/api/image/display/{{this}}"/>
-                  {{/each}}
+                  {{> imagegallery }}
                 {{/if}}
               </div>
             </div>
@@ -238,11 +236,7 @@
               {{/if}}
             </div>
             {{#if this.images}}
-              <div class="post-images {{#if this.contentWarnings}}content-warning-images{{/if}}">
-                {{#each this.images}}
-                  <img alt="{{#if ../this.imageDescriptions}}{{lookup ../this.imageDescriptions @index}} (posted by {{../this.author.username}}){{else}}Image posted by {{../this.author.username}}{{#if ../this.imageTags}}, which may contain: {{../this.imageTags}}{{/if}}{{/if}}" class="post-single-image" src="{{this}}" data-featherlight="{{this}}"/>
-                {{/each}}
-              </div>
+              {{> imagegallery }}
             {{/if}}
           </div>
         </div>
@@ -335,9 +329,7 @@
                 <div class="comment-content">
                   {{{this.parsedContent}}}
                   {{#if this.images}}
-                    {{#each this.images}}
-                      <img alt="{{#if ../this.imageDescriptions}}{{lookup ../this.imageDescriptions @index}} (posted by {{../this.author.username}}){{else}}Image posted by {{../this.author.username}}{{#if ../this.imageTags}}, which may contain: {{../this.imageTags}}{{/if}}{{/if}}" class="post-single-image" src="/api/image/display/{{this}}" data-featherlight="/api/image/display/{{this}}"/>
-                    {{/each}}
+                    {{> imagegallery }}
                   {{/if}}
                 </div>
               </div>
@@ -409,11 +401,7 @@
                 {{/if}}
               </div>
               {{#if this.images}}
-                <div class="post-images {{#if this.contentWarnings}}content-warning-images{{/if}}">
-                  {{#each this.images}}
-                    <img alt="{{#if ../this.imageDescriptions}}{{lookup ../this.imageDescriptions @index}} (posted by {{../this.author.username}}){{else}}Image posted by {{../this.author.username}}{{#if ../this.imageTags}}, which may contain: {{../this.imageTags}}{{/if}}{{/if}}" class="post-single-image" src="{{this}}" data-featherlight="{{this}}"/>
-                  {{/each}}
-                </div>
+                {{> imagegallery }}
               {{/if}}
             </div>
           </div>
@@ -492,9 +480,7 @@
                   <div class="comment-content">
                     {{{this.parsedContent}}}
                     {{#if this.images}}
-                      {{#each this.images}}
-                        <img alt="{{#if ../this.imageDescriptions}}{{lookup ../this.imageDescriptions @index}} (posted by {{../this.author.username}}){{else}}Image posted by {{../this.author.username}}{{#if ../this.imageTags}}, which may contain: {{../this.imageTags}}{{/if}}{{/if}}" class="post-single-image" src="/api/image/display/{{this}}" data-featherlight="/api/image/display/{{this}}"/>
-                      {{/each}}
+                      {{> imagegallery }}
                     {{/if}}
                   </div>
                 </div>
