--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -68,15 +68,6 @@ function pasteHtmlAtCaret(element, html, selectPastedContent = false) {
   }
 }
 
-function resetImageUploadFields(){
-  $("#postImageUrl").val("");
-  $("#postImageTags").val("");
-  $("#postSubmit").html("Send <i class=\"fas fa-chevron-right\"></i>").prop('disabled', false);
-  $(".editable-post-content").prop('required',true);
-  $(".image-preview")[0].style.backgroundImage = "url(/images/imagePreviewWindowDefault.jpg)";
-  $(".file-input").val(null);
-}
-
 // TRIBUTE-RELATED FUNCTIONALITY (@-MENTIONS)
 
 $(function() {
@@ -96,12 +87,7 @@ $(function() {
   $('#postsContainer').on( 'append.infiniteScroll', function( event, response, path, items ) {
     editor.addElements('.editable-text');
     tribute.attach($(".editable-comment-content"));
-    // $('*[data-featherlight-gallery]').featherlightGallery({
-  	// 	previousIcon: '<i class="fas fa-angle-left"></i>',     /* Code that is used as previous icon */
-  	// 	nextIcon: '<i class="fas fa-angle-right"></i>',         /* Code that is used as next icon */
-  	// 	galleryFadeIn: 100,          /* fadeIn speed when slide is loaded */
-  	// 	galleryFadeOut: 100          /* fadeOut speed before slide is loaded */
-  	// });
+    $('*[data-featherlight-gallery]').featherlightGallery();
   });
 
   // RICH TEXT EDITOR INIT
