--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,7 +260,7 @@ p{
   #topPostControlsRow,
   #bottomPostControlsRow,
   #replyControlsRow {
-    flex-direction: column;
+    flex-direction: row;
     align-content: flex-start;
     align-items: flex-start !important;
   }
@@ -281,6 +281,7 @@ p{
   .replyEmojiWindowButton{
     display: none;
   }
+
 }
 
 body {
@@ -1162,6 +1163,9 @@ background-size: 5.66px 5.66px;
   }
   .post-images{
     max-height:175px;
+  }
+  .newimagecont{
+    height: 150px;
   }
 }
 
