--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -28,9 +28,9 @@
     <div class="leftSideControls">
       <div class="switch-field" id="visibilityControls">
         <input type="radio" id="postPrivacy-public" name="postPrivacy" value="public" checked />
-        <label for="postPrivacy-public"><i class='fas fa-eye'></i> Everyone</label>
+        <label for="postPrivacy-public"><i class='fas fa-eye'></i></label>
         <input type="radio" id="postPrivacy-private" name="postPrivacy" value="private" />
-        <label for="postPrivacy-private"><i class='fas fa-eye-slash'></i> Trusted only</label>
+        <label for="postPrivacy-private"><i class='fas fa-eye-slash'></i></label>
       </div>
     </div>
     {{/unless}}
