Added link and list functionality

--- a/views/partials/helperscripts.handlebars
+++ b/views/partials/helperscripts.handlebars
@@ -95,7 +95,7 @@ $(function() {
   var editor = new MediumEditor('.editable-text', {
     buttonLabels: 'fontawesome',
     toolbar: {
-      buttons: ['bold', 'italic', 'quote']
+      buttons: ['bold', 'italic', 'quote', 'unorderedlist', 'anchor']
     },
     keyboardCommands: {
       commands: [
